@@ -1545,14 +1545,29 @@ test(518, set(DT,2L,1L,3), DT, warning="Coerced 'double' RHS to 'integer'")
 test(519, set(DT,2L,1L,3L), data.table(a=INT(1,3,3),b=4:6))
 test(520, set(DT,2L,"a",2L), data.table(a=1:3,b=4:6))
 test(521, set(DT,2:3,"b",7:8), data.table(a=1:3,b=INT(4,7,8)))
-test(522, set(DT,2L,"foo",7L), error="foo.*is not a column name[.] Cannot add columns with set.*use := instead")
+test(522, set(DT,2L,"foo",7L), data.table(a=1:3,b=INT(4,7,8), foo=INT(NA,7,NA))) # error="foo.*is not a column name[.] Cannot add columns with set.*use := instead")
 test(523, set(DT,2L,c("a","a"),list(9L,10L)), error="Can't assign to the same column twice in the same query (duplicates detected).")
-test(523.1, set(DT,2L,"a",10L), data.table(a=INT(1,10,3),b=INT(4,7,8)))
+test(523.1, set(DT,2L,"a",10L), data.table(a=INT(1,10,3),b=INT(4,7,8), foo=INT(NA,7,NA)))
 setkey(DT,b)
-test(524, set(DT,2L,"a",2L), data.table(a=1:3, b=INT(4,7,8), key="b"))
-test(525, set(DT,1L,"b",6L), data.table(a=1:3, b=6:8))
-test(525.1, set(DT,j="b",value=9:11), data.table(a=1:3, b=9:11)) # plonk syntax via missing i (fixed in 1.8.1)
-test(525.2, set(DT,NULL,"b",12:14), data.table(a=1:3, b=12:14))  # plonk syntax via NULL i
+test(524, set(DT,2L,"a",2L), data.table(a=1:3, b=INT(4,7,8), foo=INT(NA,7,NA), key="b"))
+test(525, set(DT,1L,"b",6L), data.table(a=1:3, b=6:8, foo=INT(NA,7,NA)))
+test(525.1, set(DT,j="b",value=9:11), data.table(a=1:3, b=9:11, foo=INT(NA,7,NA))) # plonk syntax via missing i (fixed in 1.8.1)
+test(525.2, set(DT,NULL,"b",12:14), data.table(a=1:3, b=12:14, foo=INT(NA,7,NA)))  # plonk syntax via NULL i
+
+# NEW ADDITIONAL TESTS FOR set() - FR #2077 - for using set to add columns by reference
+DT1 <- data.table(x = 1, y = 1:10, fac = sample(LETTERS[1:3], 10, replace = TRUE)) # from SO
+DT2 <- copy(DT1)
+mul=c(5.3,2.8)
+for (j in seq_along(mul)) set(DT1, i=NULL, j=paste0("dot", j), mul[j]*DT1[[j]])
+DT2[, `:=`(dot1=5.3*x, dot2=2.8*y)]
+test(1096.1, DT1, DT2)
+
+set(DT1, i=NULL, j="dot2", value=NULL) # remove "dot2"
+test(1096.2, DT1, DT2[, list(x,y,fac, dot1)])
+
+DT2[, dot2 := NULL][5:9, `:=`(bla1 = 0L, x = 3L, bla2 = 2L)]
+set(DT1, i=5:9, j=c("bla1", "x", "bla2"), value=list(0L, 3L, 2L))
+test(1096.3, DT1, DT2) # more testing with many columns including existing columns
 
 
 # Test that data.frame incompability is fixed, came to light in Feb 2012
